# digital-human-tool

./: .env.example  .gitignore  .superpowers  CLAUDE.md  DESIGN-APPLE.md  Ralph_Loop_news_algorithm_optimization.md  Ralph_Loop_news_optimization_summary.md  SPEC.md  package-lock.json  package.json  pyproject.toml
app/: CLAUDE.md  babel.config.js  index.html  news_output.js  package-lock.json  package.json  postcss.config.js  project.config.json  tsconfig.json
app/config/: index.js
app/data/: news.json
app/src/: app.config.ts  app.scss
data/: deerflow_optimization.md  news.json  news_bilingual.json
desktop/: .gitignore  README.md  electron-builder.json  package-lock.json  package.json  vite.config.ts
desktop/src/: main.ts  preload.ts
desktop/src-renderer/: App.tsx  index.html  styles.css
digital-human-tool/: README.md
docs/: system_design.md
ralph/: prd.json  progress.txt
scripts/: collect_news.py  daily_workflow.sh  fix-taro-kernel.sh  generate_news.py  news_workflow.py  run.sh  setup.sh  test_minimax.py  tts_server.py
shared/: constants.ts  package.json
shared/models/: index.ts
shared/services/: quality.ts
src/: config.py  main.py
test/: news_data.json  news_output.js  news_quality_report.md  optimized_result.json
tests/: test_analytics.py  test_avatar_service.py  test_cache.py  test_cdn.py  test_export.py  test_language.py  test_lipsync.py  test_minimax_client.py  test_photo_service.py  test_preview.py  test_scene_generator.py  test_scene_service.py  test_tts_service.py  test_user_service.py  test_video_service.py  test_voice_config.py
(+81 files in other folders)
